--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
         <title>Jordan Noble</title>
     </head>
     <body>
-        <<h1> Jordan's Index </h1>
-        <h2> Primary school teacher aspiring to new heights as a software developer.</h2>
-        <br />
-        <hr />
-        <h3>About Me</h3>
-        <p>Hey, I'm Jordan. I'm studying with Command Shift in the hopes of securing my dream job in the tech industry.</p>
-        <p>I got into code the usual way, with free online resources. I studied with FreeCodeCamp for a while, and tried my hand at Harvard's CS50 course. </p>
+        <header>
+            <h1> Jordan's Index </h1>
+            <h2> Primary school teacher aspiring to new heights as a software developer.</h2>
+        </header>
+    <main>
+    <br />
+    <hr />
+        <article>
+            <h3>About Me</h3>
+            <p>Hey, I'm Jordan. I'm studying with Command Shift in the hopes of securing my dream job in the tech industry.</p>
+            <p>I got into code the usual way, with free online resources. I studied with FreeCodeCamp for a while, and tried my hand at Harvard's CS50 course. </p>
+        </article>
     </body>
+    </main>
+    <footer> 2023 Jordan Noble</footer>
 </html>
