--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
             <p>Hey, I'm Jordan. I'm studying with Command Shift in the hopes of securing my dream job in the tech industry.</p>
             <p>I got into code the usual way, with free online resources. I studied with FreeCodeCamp for a while, and tried my hand at Harvard's CS50 course. </p>
         </article>
+    <article>
+            <h3>Qualities</h3>
+            <ol>
+                <li>Hilarious</li>
+                <li>Good looking</li>
+                <li>Modest</li>
+            </ol>
+    </article>
+    <article>
+            <h3>Hobbies & Interests</h3>
+            <ul>
+                <li>Travel</li>
+                <li>Gaming</li>
+                <li>Gym</li>
+            </ul>
+    </article>
     </body>
     </main>
     <footer> 2023 Jordan Noble</footer>
