css first draft

--- a/index.html
+++ b/index.html
@@ -1,88 +1,85 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Jordan Noble</title>
+        <link rel="stylesheet" href="styles.css">
+        <title>Jordan Noble</title>
     </head>
-<div id="container">
-    <body>
-    <div id ="header">
-    <header>
-        <h1> Jordan's Portfolio</h1>
-        <h2> Primary school teacher aspiring to new heights as a software developer.</h2>
-    </header>
+<main>
+<body>
+<div class="container">
+    <div class="navbar">
+        <a href="Home" class="button">Projects</a>
+        <a href="news.asp" class="button">About Me</a>
+        <a href="contact.asp" class="button">Contact Me</a>
+        <a href="about.asp" class="button">My Socials</a>
     </div>
-    <main>
-    <div id="projects"></div>
+    <div class="header">
+        <header>
+            <h1> Jordan's Portfolio </h1>
+            <h2 class="headercaption"> Primary school teacher aspiring to new heights as a software developer.</h2>
+        </header>
+    </div>
+    <div class="projects">
         <h2>Projects</h2>
         <figure>
             <figcaption>Random Number Generator</figcaption>
-        <img src="./images/randomnumbergenerator.jpg">
+            <img src="./images/randomnumbergenerator.jpg">
         </figure>
         <figure>
             <figcaption>Calorie Counter</figcaption>
-        <img src="./images/caloriecounter.jpg">
+            <img src="./images/caloriecounter.jpg">
         </figure>
         <figure>
             <figcaption>Price Comparison App</figcaption>
-        <img src="./images/pricecomparison.jpg">
+            <img src="./images/pricecomparison.jpg">
         </figure>
-      
     </div>
-    <div id="aboutme">
+    <div class="aboutme">
         <h2>About Me</h2>
-        <p>Hey, I'm Jordan. I'm studying with Command Shift in the hopes of securing my dream job in the tech industry.</p>-
-        <h3>What I like to do:</h3>
-        <ul>
-        <li>Travel</li>
-        <li>Gaming</li>
-        <li>Gym</li>
-        </ul>
+            <p>Hey, I'm Jordan. I'm studying with Command Shift in the hopes of securing my dream job in the tech industry.
+                I like coding, hiking, travelling, and going to gigs and festivals with my friends.
+            </p>-
         <figure> 
-        <img src="./images/korea.jpg" alt="jordan sitting in korean temple">
-        <figcaption>
-        This is me when I lived abroad in Korea.
-        </figcaption>
+            <img src="./images/korea.jpg" alt="jordan sitting in korean temple">
+            <figcaption>This is me when I lived abroad in Korea.</figcaption>
         </figure>
         <figure>
-        <img src="./images/machupicchu.jpg" alt="jordan next to machu picchu">
-        <figcaption>
-        This is me when I travelled around South America.
-        </figcaption>
+            <img src="./images/machupicchu.jpg" alt="jordan next to machu picchu">
+            <figcaption>This is me when I travelled around South America.</figcaption>
         </figure>
     </div>
-    <div id=“socials”">
-        <h2>My Socials</h2>
-        <p>Follow me on <a href="https://twitter.com/JordsCodes">Twitter</a>!</p>
-        <p>Follow me on <a href="">Linkedin</a>!</p>
-    </div>
-    <div id="contactme">
+    <div class="contactme">
         <h2>Contact Me</h2>
-        <p>If you'd like to get in touch, please provide your details below :).</p>
-        <fieldset>
-        <legend>Personal Details</legend>
-        </br>
-        <label>
-        Name:
-        <input type="text" name="name">
-        </label>
-        </br>
-        </br>
-        <label>
-        Email:
-        <input type="email" name="email">
-        </label>
-        <hr>
-        <legend>Your message goes here :):</legend>
-        </br>
-        <label>
-        <textarea name="details" placeholder="Type here...""></textarea>"
-        </label>
-        </fieldset>
+            <p>If you'd like to get in touch, please provide your details below :).</p>
+            <fieldset>
+                <legend>Personal Details</legend>
+                </br>
+                <label>
+                    Name:
+                    <input type="text" name="name">
+                </label>
+                </br>
+                </br>
+                <label>
+                    Email:
+                    <input type="email" name="email">
+                </label>
+                <hr>
+                <legend>Your message goes here :):</legend>
+                </br>
+                <label>
+                    <textarea name="details" placeholder="Type here...""></textarea>"
+                </label>
+            </fieldset>
     </div>
-    </body>
-    </main>
-    <div id="footer">
-        <footer> 2023 Jordan Noble</footer>
+    <div class="social">
+        <h2>My Socials</h2>
+            <p>Follow me on <a href="https://twitter.com/JordsCodes">Twitter</a>!</p>
+            <p>Follow me on <a href="">Linkedin</a>!</p>
     </div>
+    <div class="footer"><p>Jordan Noble 2023</p></div>
+    
 </div>
+</body>
+</main>
 </html>
