--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </div>
     <div class="aboutme" id="aboutme">
         <h2>About Me</h2>
-            <p>Hey, I'm Jordan. I'm studying with <a href="https://www.commandshift.co/">Command Shift</a> in the hopes of securing my dream job in the tech industry.
+            <p>Hey, I'm Jordan. I'm studying with <a href="https://www.commandshift.co/" target="_blank">Command Shift</a> in the hopes of securing my dream job in the tech industry.
                 I like coding, hiking, travelling, and going to gigs and festivals with my friends.
-            </p>-
+            </p>
         <figure> 
             <img src="./images/korea.jpg" alt="jordan sitting in korean temple">
             <figcaption>This is me when I lived abroad in Korea.</figcaption>
@@ -75,8 +75,8 @@
     </div>
     <div class="social" id="social">
         <h2>My Socials</h2>
-            <p>Follow me on twitter!<a href="https://twitter.com/JordsCodes"><img src="./images/twitter.png" class="socialimage"></a></p>
-            <p>Follow me on linkedin! <a href="https://uk.linkedin.com/"><img src="./images/linkedin.png" class="socialimage"></a></p>
+            <p>Follow me on twitter!<a href="https://twitter.com/JordsCodes" target="_blank"><img src="./images/twitter.png" class="socialimage"></a></p>
+            <p>Follow me on linkedin! <a href="https://uk.linkedin.com/" target="_blank" ><img src="./images/linkedin.png" class="socialimage"></a></p>
     </div>
     <div class="footer"><p>Jordan Noble 2023</p></div>
     
